# esphome-avionmesh

./: .gitignore  .gitmodules  LICENSE  README.md
components/avionmesh/: __init__.py  avionmesh_hub.cpp  avionmesh_hub.h  avionmesh_web.cpp  avionmesh_web.h  device_db.cpp  device_db.h  fix_cmake.py  mqtt_discovery.cpp  mqtt_discovery.h  web.css  web.html  web.js  web_content.h
components/esphome_avionmesh/: __init__.py  device_db.h  web_content.h
docs/: PRD.md  api.md  database.md  mqtt.md
tests/: CMakeLists.txt  test_api_control.cpp  test_group_latch.cpp  test_group_latch_v2.cpp  test_mqtt_commands.cpp
tests/stubs/esphome/components/esp32_ble/: ble.h
tools/: avion_import.py
